homepractice/apps/identity/ingress/ingress.yaml
---
# Keycloak Ingress - HTTPS with TLS termination
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: identity
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - keycloak.practice.local
      secretName: identity-tls
  rules:
    - host: keycloak.practice.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
